--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/client/src/main.jsx"></script>
   </body>
 </html>
 
